force-app/main/default/objects/hed__Course_Enrollment__c/fields/Banner_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Banner_Confirmed__c</fullName>
    <description>True if course connection is verified in Banner and has a valid Banner status.</description>
    <formula>(ISPICKVAL(Banner_Status__c, &apos;RE&apos;)||ISPICKVAL(Banner_Status__c, &apos;RW&apos;)||ISPICKVAL(Banner_Status__c, &apos;AU&apos;)||ISPICKVAL(Banner_Status__c, &apos;RD&apos;)||ISPICKVAL(Banner_Status__c, &apos;NG&apos;)||ISPICKVAL(Banner_Status__c, &apos;XE&apos;)||ISPICKVAL(Banner_Status__c, &apos;RS&apos;))&amp;&amp;ISPICKVAL(hed__Verification_Status__c, &apos;Verified&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if course connection is verified in Banner and has a valid Banner status.</inlineHelpText>
    <label>Banner Confirmed</label>
    <type>Checkbox</type>
</CustomField>