force-app/main/default/objects/hed__Course_Enrollment__c/fields/Banner_Enrollment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Banner_Enrollment_Reference__c</fullName>
    <description>TermCode-CRN-PIDM</description>
    <externalId>true</externalId>
    <inlineHelpText>TermCode-CRN-PIDM</inlineHelpText>
    <label>Banner Enrollment Reference</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>