force-app/main/default/objects/hed__Course_Enrollment__c/fields/Banner_Status__c.field-meta.xml
<CustomField>
    <fullName>Banner_Status__c</fullName>
    <description>Status of Enrollment in Banner</description>
    <label>Banner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LA</fullName>
                <label>Late Add-staff use only</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Audit-staff use only</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>Registered</label>
            </value>
            <value>
                <fullName>WD</fullName>
                <label>Withdraw From Course by staff</label>
            </value>
            <value>
                <fullName>XF</fullName>
                <label>Drop CSU Online Crse-No Assess</label>
            </value>
            <value>
                <fullName>WL</fullName>
                <label>Waitlist</label>
            </value>
            <value>
                <fullName>NG</fullName>
                <label>Non-gradable Component-staff</label>
            </value>
            <value>
                <fullName>XW</fullName>
                <label>Withdraw CSU Online Cntrct Crs</label>
            </value>
            <value>
                <fullName>UW</fullName>
                <label>University Withdrwl-staff only</label>
            </value>
            <value>
                <fullName>UN</fullName>
                <label>Univ Wthdrwl INTO/SI</label>
            </value>
            <value>
                <fullName>XD</fullName>
                <label>Drop CSU Online Course</label>
            </value>
            <value>
                <fullName>DW</fullName>
                <label>Drop on web</label>
            </value>
            <value>
                <fullName>UX</fullName>
                <label>Univ Wthdrwl CSU Online-staff</label>
            </value>
            <value>
                <fullName>ZD</fullName>
                <label>Staff Drop-not on trans-assess</label>
            </value>
            <value>
                <fullName>CW</fullName>
                <label>Withdraw From Course on web</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>Cancelled Section-staff use</label>
            </value>
            <value>
                <fullName>XE</fullName>
                <label>CSU Online Extension Granted</label>
            </value>
            <value>
                <fullName>RD</fullName>
                <label>Repeat/Delete</label>
            </value>
            <value>
                <fullName>UC</fullName>
                <label>Univ Wthdrwl pre-cens-staff</label>
            </value>
            <value>
                <fullName>XU</fullName>
                <label>Drop CSU Online Cntrct Course</label>
            </value>
            <value>
                <fullName>RW</fullName>
                <label>Register on Web</label>
            </value>
            <value>
                <fullName>UNPAID</fullName>
                <label>Unpaid</label>
            </value>
            <value>
                <fullName>UNPAID_DW</fullName>
                <label>Unpaid - Removed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>