force-app/main/default/objects/hed__Course_Enrollment__c/fields/Contact_CSU_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_CSU_ID__c</fullName>
    <description>Contact&apos;s CSU ID</description>
    <formula>hed__Contact__r.CSU_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact&apos;s CSU ID</inlineHelpText>
    <label>Contact CSU ID</label>
    <type>Text</type>
</CustomField>