force-app/main/default/objects/hed__Course_Enrollment__c/fields/Credit_Registration_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Credit_Registration_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a journey event was created for this enrollment. Reset to false if a drop occurs.</description>
    <inlineHelpText>True if a journey event was created for this enrollment. Reset to false if a drop occurs.</inlineHelpText>
    <label>Credit Registration Email Sent</label>
    <type>Checkbox</type>
</CustomField>