force-app/main/default/objects/hed__Course_Enrollment__c/fields/Drop_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Date__c</fullName>
    <description>Drop date from PoT.</description>
    <formula>hed__Course_Offering__r.Drop_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Drop date from PoT.</inlineHelpText>
    <label>Drop Date</label>
    <type>Date</type>
</CustomField>