force-app/main/default/objects/hed__Course_Enrollment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the offering.</description>
    <formula>hed__Course_Offering__r.hed__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End date of the offering.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>