force-app/main/default/objects/hed__Course_Enrollment__c/fields/Is_Contract_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract_Enrollment__c</fullName>
    <description>True if section for this enrollment is a Contact Course.</description>
    <formula>hed__Course_Offering__r.Is_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if section for this enrollment is a Contact Course.</inlineHelpText>
    <label>Is Contract Enrollment</label>
    <type>Checkbox</type>
</CustomField>