force-app/main/default/objects/hed__Course_Enrollment__c/fields/Offering_CRN__c.field-meta.xml
<CustomField>
    <fullName>Offering_CRN__c</fullName>
    <description>CRN of Enrollment in Banner</description>
    <formula>hed__Course_Offering__r.Banner_CRN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CRN of Enrollment in Banner</inlineHelpText>
    <label>Offering CRN</label>
    <type>Text</type>
</CustomField>