force-app/main/default/objects/hed__Course_Enrollment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the offering.</description>
    <formula>hed__Course_Offering__r.hed__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start date of the offering.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>