force-app/main/default/objects/hed__Course_Enrollment__c/fields/Student_Notified__c.field-meta.xml
<CustomField>
    <fullName>Student_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the student been emailed/notified about this enrollment?</description>
    <inlineHelpText>Has the student been emailed/notified about this enrollment?</inlineHelpText>
    <label>Student Notified</label>
    <type>Checkbox</type>
</CustomField>