force-app/main/default/objects/hed__Course_Enrollment__c/fields/Student_PIDM__c.field-meta.xml
<CustomField>
    <fullName>Student_PIDM__c</fullName>
    <description>PIDM</description>
    <formula>hed__Contact__r.HR_Directory_Entry__r.csumidp__HR_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PIDM</inlineHelpText>
    <label>Student PIDM</label>
    <type>Text</type>
</CustomField>