force-app/main/default/objects/hed__Course_Enrollment__c/fields/Term_Code__c.field-meta.xml
<CustomField>
    <fullName>Term_Code__c</fullName>
    <description>ODS Term Id e.g. 202410 for Spring 2024</description>
    <formula>hed__Course_Offering__r.hed__Term__r.ODS_Term_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ODS Term Id e.g. 202410 for Spring 2024</inlineHelpText>
    <label>Term Code</label>
    <type>Text</type>
</CustomField>