force-app/main/default/objects/hed__Course_Enrollment__c/fields/Via_XE__c.field-meta.xml
<CustomField>
    <fullName>Via_XE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if entered via Banner XE</description>
    <inlineHelpText>True if entered via Banner XE</inlineHelpText>
    <label>Via XE</label>
    <type>Checkbox</type>
</CustomField>