force-app/main/default/objects/hed__Course_Enrollment__c/fields/Withdraw_50_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_50_Date__c</fullName>
    <description>Withdraw 50 date from PoT.</description>
    <formula>hed__Course_Offering__r.Withdraw_50_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Withdraw 50 date from PoT.</inlineHelpText>
    <label>Withdraw 50 Date</label>
    <type>Date</type>
</CustomField>